Tests/ShouldSucceed/try11.adl
CONTEXT Test

PATTERN Test11
r :: A*A
r :: B*C
RULE r = r[A*A]/\I
ENDPATTERN

ENDCONTEXT

{-
   Purpose: a superficial check on type deduction
   Result: PASS
   Reason: The type of I can be determined from its context
   Note that it cannot be determined for RULE r = r[A*A]\/I
-}