Tests/ShouldFail/try11.adl
CONTEXT Test

PATTERN Test11
r :: A*A
r :: B*C
RULE r = r[A*A]\/I
ENDPATTERN

ENDCONTEXT

{-
   Purpose: a superficial check on type deduction
   Result: FAIL
   Reason: The type of I is a subset of r(line 6:6), so the type of r is not determined...
   Error message:

   The pattern named "Test11" contains errors:
   line 6:6, file "try11.adl":
       Relation  r  is ambiguous.
       Is it possible that you meant r[A*A]?
       If so, please substitute r on line 6:6, file "try11.adl"
       by r[A*A].
   line 6:18, file "try11.adl":
       Cannot deduce a type for  I.
-}